2010-03-30  Don Porter  <dgp@users.sourceforge.net>

	* generic/tclObj.c (Tcl_GetCommandFromObj):	[Bug 2979402]: Reorder
	the validity tests on internal rep of a "cmdName" value to avoid
	invalid reads reported by valgrind.

2010-03-29  Don Porter  <dgp@users.sourceforge.net>

	* generic/tclStringObj.c:	Fix array overrun in test format-1.12
	caught by valgrind testing.

2010-03-25  Donal K. Fellows  <dkf@users.sf.net>

	* unix/tclUnixFCmd.c (TclUnixCopyFile): [Bug 2976504]: Corrected
	number of arguments to fstatfs() call.

2010-03-24  Don Porter  <dgp@users.sourceforge.net>

	* generic/tclResult.c:	[Bug 2383005]: Revise [return -errorcode] so
	* tests/result.test:	that it rejects illegal non-list values.

2010-03-20  Donal K. Fellows  <dkf@users.sf.net>

	* generic/tclIO.c (CopyData): Allow the total number of bytes copied
	by [fcopy] to exceed 2GB. Can happen when no -size parameter given.

2010-03-18  Don Porter  <dgp@users.sourceforge.net>

	* generic/tclListObj.c: [Bug 2971669]: Prevent in overflow trouble in
	* generic/tclTestObj.c: ListObjReplace operations.  Thanks to kbk for
	* tests/listObj.test:   fix and test.

2010-03-12  Jan Nijtmans  <nijtmans@users.sf.net>

	* win/makefile.vc:      Fix [Bug 2967340]: Static build failure
	* win/.cvsignore

2010-03-09  Andreas Kupries  <andreask@activestate.com>

	* generic/tclIORChan.c: [Bug 2936225]: Thanks to Alexandre Ferrieux
	* doc/refchan.n:	<ferrieux@users.sourceforge.net> for debugging
	* tests/ioCmd.test:	and fixing the problem. It is the write-side
				equivalent to the bug fixed 2009-08-06.

2010-03-09  Don Porter  <dgp@users.sourceforge.net>

	* library/tzdata/America/Matamoros: New locale
	* library/tzdata/America/Ojinaga: New locale
	* library/tzdata/America/Santa_Isabel: New locale
	* library/tzdata/America/Asuncion:
	* library/tzdata/America/Tijuana:
	* library/tzdata/Antarctica/Casey:
	* library/tzdata/Antarctica/Davis:
	* library/tzdata/Antarctica/Mawson:
	* library/tzdata/Asia/Dhaka: